self-hosted-services/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: vaultwarden
      app.kubernetes.io/part-of: vaultwarden
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/instance: vaultwarden
        app.kubernetes.io/component: vaultwarden
        app.kubernetes.io/part-of: vaultwarden
    spec:
      nodeSelector:
        kubernetes.io/hostname: crobasaurusrex
      containers:
      - name: vaultwarden
        # https://hub.docker.com/r/vaultwarden/server/tags
        # renovate: datasource=github-tags depname=dani-garcia/vaultwarden versioning=semver
        image: vaultwarden/server:1.35.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: 512Mi
            cpu: 100m
        volumeMounts:
          - mountPath: /data
            name: data
            readOnly: false
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: vaultwarden-pvc
